--- a/public/views/pages/login.ejs
+++ b/public/views/pages/login.ejs
@@ -49,9 +49,7 @@
                   <div class="form-group">
                     <input class="form-control" type="password" placeholder="Password" name="password" required>
                   </div>
-                  <% if (errorMessage) { %>
-                  <p class="fs--1 text-danger"><%= errorMessage %></p>
-                  <% } %>
+                  <!-- Impliment EJS here to add the error message to the screen https://ejs.co/ -->
                   <div class="row justify-content-between align-items-center">
                     <div class="col-auto">
                       <div class="custom-control custom-checkbox"><input class="custom-control-input" type="checkbox" id="basic-checkbox" checked="checked" name="rememberMe"><label class="custom-control-label" for="basic-checkbox">Remember me</label></div>
