--- a/public/views/pages/signup.ejs
+++ b/public/views/pages/signup.ejs
@@ -46,37 +46,17 @@
                   </div>
                 </div>
                 <form action="/signup" method="post" id='form'>
-                  <div class="mb-1">
+                  <div class="mb-3">
                     <input id='username' class="form-control" type="text" placeholder="Username" name="username"
                       required>
+                  </div>                  
+                  <div class="mb-3">
+                    <input class="form-control" type="email" pattern="[^@]+@[^@]+\.[a-zA-Z]{2,6}" placeholder="Email address" name="email" required>
                   </div>
-                  <div class="card mb-3">
-                    <div class="card-body p-0 pl-2">
-                      <p class="mb-0 fs--1">Username must be at least <b class="text-info"
-                          id="usernameLengthValue">6</b> characters long</p>
-                    </div>
+                  <div class="mb-3">
+                    <input class="form-control" type="password" placeholder="Password" name="password" required>
                   </div>
-                  <div class="mb-3"><input class="form-control" type="email" pattern="[^@]+@[^@]+\.[a-zA-Z]{2,6}" placeholder="Email address" name="email"
-                      required></div>
-                  <div class="row gx-3">
-                    <div class="mb-1 col-sm-6"><input id='password' class="form-control" type="password"
-                        placeholder="Password" name="password" required></div>
-                    <div class="mb-1 col-sm-6"><input id='confirm-password' class="form-control" type="password"
-                        placeholder="Confirm Password" required></div>
-                  </div>
-                  <div class="card mb-3">
-                    <div class="card-body p-0 pl-2">
-                      <p class="mb-0 fs--1">Password must be at least <b class="text-info"
-                          id="passwordLengthValue">8</b> characters long and must contain an <b class="text-info"
-                          id="passwordUpperCaseValue">Upper Case Letter</b> and a <b class="text-info"
-                          id="passwordNumberValue">Number</b><span style="display: none;"
-                          id="passwordsMustMatchInfo"><br>Confirm password and password <b id="passwordMatchValue">must
-                            match</b></span></p>
-                    </div>
-                  </div>
-                  <% if (errorMessage) { %>
-                  <p class="fs--1 text-danger"><%= errorMessage %></p>
-                  <% } %>
+                  <!-- Impliment EJS here to add the error message to the screen https://ejs.co/ -->
                   <div class="form-check"><input class="form-check-input" type="checkbox" id="remember-me"
                       name="rememberMe"><label class="form-label" for="remember-me">Remember Me</label></div>
                   <div class="mb-3"><button class="btn btn-primary btn-block mt-3" type="submit"
