--- a/public/views/pages/login.ejs
+++ b/public/views/pages/login.ejs
@@ -50,6 +50,7 @@
                     <input class="form-control" type="password" placeholder="Password" name="password" required>
                   </div>
                   <!-- Impliment EJS here to add the error message to the screen https://ejs.co/ -->
+                  <p class="text-danger font-weight-light"><%= errorMessage %></p>
                   <div class="row justify-content-between align-items-center">
                     <div class="col-auto">
                       <div class="custom-control custom-checkbox"><input class="custom-control-input" type="checkbox" id="basic-checkbox" checked="checked" name="rememberMe"><label class="custom-control-label" for="basic-checkbox">Remember me</label></div>
